--- a/pelican/content/40123256_w2.md
+++ b/pelican/content/40123256_w2.md
@@ -2,17 +2,17 @@ Title: 2015 計算機程式 作業二 (重點筆記)
 Date: 2015-09-25 16:00
 Category: Python
 Tags: pelican, publishing
-Slug: 2015cp_hw_w2
-Authors: 40123157
+Slug: 40123256_w2
+Authors: 40123256
 Summary: [w2] 09/25: Python3: Leo Editor: 管理系統(Markdown, pelican), gh-pages: 倉儲分支, CamStudio/FormatFactory/VLCPortable: 影片錄製/轉檔/撥放
 
 
 
 
 
-<iframe src="40123157_cp_w2_p.html" width="500" height="300"></iframe>
+<iframe src="40123256_cp_w2_p.html" width="500" height="300"></iframe>
 
-[作業二投影片](40123157_cp_w2_p.html){:target="_blank"}
+[作業二投影片](40123256_cp_w2_p.html){:target="_blank"}
 
   * **課程網站**: [wordpress-2015course](https://wordpress-2015course.rhcloud.com){:target="_blank"}
     * Category: 2015 計算機程式 (教材專用)
