--- a/pelican/content/40123256_w3.md
+++ b/pelican/content/40123256_w3.md
@@ -2,17 +2,17 @@ Title: 2015 計算機程式 作業三
 Date: 2015-10-02 16:00
 Category: Python
 Tags: pelican, publishing
-Slug: 2015cp_hw_w3
-Authors: 40123157
+Slug: 40123256_w3
+Authors: 40123256
 Summary: [w3] 10/02: Jupyter notebook: 程式轉網誌文章
 
 
 
 
 
-<iframe src="40123157_cp_w3_p.html" width="500" height="300"></iframe>
+<iframe src="40123256_cp_w3_p.html" width="500" height="300"></iframe>
 
-[作業三投影片](40123157_cp_w3_p.html){:target="_blank"}
+[作業三投影片](40123256_cp_w3_p.html){:target="_blank"}
 
   * **reveal**:
       * reveal.leo架構
