--- a/pelican/content/40123256_w7.md
+++ b/pelican/content/40123256_w7.md
@@ -2,17 +2,17 @@ Title: 2015 計算機程式 作業七
 Date: 2015-10-30 16:00
 Category: Python
 Tags: pelican, publishing
-Slug: 2015cp_hw_w7
-Authors: 40123157
+Slug: 40123256_w7
+Authors: 40123256
 Summary: [w7] 10/30: Python 3: 程式基本概念, 程式編譯: Jupyter, SciTE
 
 
 
 
 
-<iframe src="40123157_cp_w7_p.html" width="500" height="300"></iframe>
+<iframe src="40123256_cp_w7_p.html" width="500" height="300"></iframe>
 
-[作業七投影片](40123157_cp_w7_p.html){:target="_blank"}
+[作業七投影片](40123256_cp_w7_p.html){:target="_blank"}
 
 機械設計工程師: Ana3_2015 (專用可攜程式系統, 業界主流: Python 2.7)
 
