--- a/pelican/content/40123256_w8.md
+++ b/pelican/content/40123256_w8.md
@@ -2,23 +2,23 @@ Title: 2015 計算機程式 作業八 (自我評量)
 Date: 2015-11-06 16:00
 Category: Python
 Tags: pelican, publishing
-Slug: 2015cp_hw_w8
-Authors: 40123157
+Slug: 40123256_w8
+Authors: 40123256
 Summary: [w8] 11/06: 課程筆記網誌建構: Leo Editor, Jupyter notebook, [w9] 11/13: 期中考自我評量
 
 
 
 
 
-<iframe src="40123157_cp_w8_p.html" width="500" height="300"></iframe>
+<iframe src="40123256_cp_w8_p.html" width="500" height="300"></iframe>
 
-[作業八投影片](40123157_cp_w8_p.html){:target="_blank"}
+[作業八投影片](40123256_cp_w8_p.html){:target="_blank"}
 
   * **期中考核項目**:
       * **[50%]** 個人作業頁面(全班協同區)
-        * [2015fallcpb/user/40123157](http://2015fallhw.github.io/2015fallcpb/user/40123157/){:target="_blank"}
+        * [2015fallcpa/user/40123256](http://2015fallhw.github.io/2015fallcpa/user/40123256/){:target="_blank"}
       * **[60%]** 個人作業倉儲(gh-pages)
-        * [40123157.github.io/cpbw8](http://40123157.github.io/cpbw8/){:target="_blank"}
+        * [40123256.github.io/cpw](http://40123256.github.io/cpw/){:target="_blank"}
       * **[65%]** 作業練習影片(含語音說明)
         * [vimeo.com/user25757242](https://vimeo.com/user25757242){:target="_blank"}
       * **[75%]** 作業投影片, 筆記, 操作過程, 心得
