--- a/pelican/content/40123256_w1.md
+++ b/pelican/content/40123256_w1.md
@@ -2,17 +2,17 @@ Title: 2015 計算機程式 作業一
 Date: 2015-09-18 16:00
 Category: Python
 Tags: pelican, publishing
-Slug: 2015cp_hw_w1
-Authors: 40123157
+Slug: 40123256_w1
+Authors: 40123256
 Summary: [w1] 09/18: Python3: 程式編(Jupyter/SciTE/cmd.exe), Github: 倉儲版本管理, copy.com: 雲端資料管理
 
 
 
 
 
-<iframe src="40123157_cp_w1_p.html" width="500" height="300"></iframe>
+<iframe src="40123256_cp_w1_p.html" width="500" height="300"></iframe>
 
-[作業一投影片](40123157_cp_w1_p.html){:target="_blank"}
+[作業一投影片](40123256_cp_w1_p.html){:target="_blank"}
 
   * basic python program:
 ~~~python
