--- a/pelican/content/40123256_w5.md
+++ b/pelican/content/40123256_w5.md
@@ -2,17 +2,17 @@ Title: 2015 計算機程式 作業五
 Date: 2015-10-16 16:00
 Category: Python
 Tags: pelican, publishing
-Slug: 2015cp_hw_w5
-Authors: 40123157
+Slug: 40123256_w5
+Authors: 40123256
 Summary: [w4] 10/09: 國慶連假; [w5] 10/16: Leo Editor: 從屬關係架構
 
 
 
 
 
-<iframe src="40123157_cp_w5_p.html" width="500" height="300"></iframe>
+<iframe src="40123256_cp_w5_p.html" width="500" height="300"></iframe>
 
-[作業五投影片](40123157_cp_w5_p.html){:target="_blank"}
+[作業五投影片](40123256_cp_w5_p.html){:target="_blank"}
 
   * 階段複習:
       * reveal2: 修復notebook編碼錯誤
