--- a/pelican/content/40123256_w6.md
+++ b/pelican/content/40123256_w6.md
@@ -2,17 +2,17 @@ Title: 2015 計算機程式 作業六
 Date: 2015-10-23 16:00
 Category: Python
 Tags: pelican, publishing
-Slug: 2015cp_hw_w6
-Authors: 40123157
+Slug: 40123256_w6
+Authors: 40123256
 Summary: [w6] 10/23: Zero to Hero with Python, 建立個人@path user在作業協同倉儲, 解決GitHub倉儲新舊版本衝突
 
 
 
 
 
-<iframe src="40123157_cp_w6_p.html" width="500" height="300"></iframe>
+<iframe src="40123256_cp_w6_p.html" width="500" height="300"></iframe>
 
-[作業六投影片](40123157_cp_w6_p.html){:target="_blank"}
+[作業六投影片](40123256_cp_w6_p.html){:target="_blank"}
 
   * **Zero to Hero** with Python:
       * C:\Ana3_2015\data\project\cp\zero_to_hero(有字幕說明)
